[package]
name = "pinger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
crc-fast = "1.7.0"
file-rotate = "0.8.0"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["native-tls"] }
scylla = { version = "1.4.1", features = ["chrono-04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.18.1"
